--- a/notebooks/db.ipynb
+++ b/notebooks/db.ipynb
@@ -320,6 +320,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "438f66bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "70b2b4ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [id, station_id, building_name, building_detail_name, usage_type, structure_type, approval_date, height, floor_area, households, families]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "database = \"../db/subway.db\"\n",
+    "engine = create_engine(f\"sqlite:///{database}\")\n",
+    "\n",
+    "query = \"\"\"SELECT \n",
+    "    b.* FROM Station_Catchment_Buildings b\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql(query, engine)\n",
+    "\n",
+    "print(df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27154d57",
    "metadata": {},
    "outputs": [],
