--- a/notebooks/db.ipynb
+++ b/notebooks/db.ipynb
@@ -427,6 +427,36 @@
     "\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4140234f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   COUNT(*)\n",
+      "0         0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "database = \"../db/subway.db\"\n",
+    "\n",
+    "engine = create_engine(f\"sqlite:///{database}\")\n",
+    "\n",
+    "# query = \"SELECT * FROM Dong_Estimated_Revenue LIMIT 10\"\n",
+    "query = \"SELECT COUNT(*) FROM Station_Congestion\"\n",
+    "df = pd.read_sql(query, engine)\n",
+    "\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
