--- a/notebooks/서울시_인구_추정매출_API_다운로드.ipynb
+++ b/notebooks/서울시_인구_추정매출_API_다운로드.ipynb
@@ -8,6 +8,82 @@
             ]
         },
         {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "9daf3a01",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import requests\n",
+                "import json\n",
+                "import pandas as pd\n",
+                "\n",
+                "\n",
+                "def create_api_url(key: str, service_id: str, *args) -> str:\n",
+                "    url = f\"http://openapi.seoul.go.kr:8088/{key}/json/{service_id}\"\n",
+                "    for arg in args:\n",
+                "        url += f\"/{arg}\"\n",
+                "    return url\n",
+                "\n",
+                "\n",
+                "def create_url(\n",
+                "    key, service_id, start_index, end_index, year_code=None, format=\"json\"\n",
+                ") -> str:\n",
+                "    url = f\"http://openapi.seoul.go.kr:8088/{key}/{format}/{service_id}/{start_index}/{end_index}\"\n",
+                "    if year_code is not None:\n",
+                "        url += f\"/{year_code}\"\n",
+                "\n",
+                "    return url\n",
+                "\n",
+                "\n",
+                "def get_result_json(url, service_id):\n",
+                "    response = requests.get(url)\n",
+                "    result = response.content.decode()\n",
+                "    result_json = json.loads(result)\n",
+                "    return result_json[service_id]\n",
+                "\n",
+                "\n",
+                "def get_list_total_count(key, service_id, year_code=None) -> str:\n",
+                "    test_url = create_url(key, service_id, 1, 1, year_code)\n",
+                "    result_json = get_result_json(test_url, service_id)\n",
+                "    data = result_json[\"list_total_count\"]\n",
+                "\n",
+                "    return data\n",
+                "\n",
+                "\n",
+                "def get_data_list(key, service_id, start_index, end_index, year_code=None):\n",
+                "    url = create_url(key, service_id, start_index, end_index, year_code)\n",
+                "    data_list = get_result_json(url, service_id)\n",
+                "    row = data_list[\"row\"]\n",
+                "    return row\n",
+                "\n",
+                "\n",
+                "def get_all_data_list(key, service_id, batch_size=999):\n",
+                "    df = pd.DataFrame()\n",
+                "    list_total_count = get_list_total_count(key, service_id)\n",
+                "    for start_index in range(1, list_total_count, batch_size):\n",
+                "        end_index = min(start_index + batch_size, list_total_count)\n",
+                "        data_list = get_data_list(key, service_id, start_index, end_index)\n",
+                "\n",
+                "        list_df = pd.DataFrame(data_list)\n",
+                "        df = pd.concat([df, list_df])\n",
+                "    return df\n",
+                "\n",
+                "\n",
+                "def get_data_list_by_year(key, service_id, year_code, batch_size=999):\n",
+                "    df = pd.DataFrame()\n",
+                "    list_total_count = get_list_total_count(key, service_id, year_code)\n",
+                "    for start_index in range(1, list_total_count, batch_size):\n",
+                "        end_index = min(start_index + batch_size, list_total_count)\n",
+                "        data_list = get_data_list(key, service_id, start_index, end_index, year_code)\n",
+                "\n",
+                "        list_df = pd.DataFrame(data_list)\n",
+                "        df = pd.concat([df, list_df])\n",
+                "\n",
+                "    return df"
+            ]
+        },
+        {
             "cell_type": "markdown",
             "id": "070a74a7",
             "metadata": {},
@@ -24,13 +100,9 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "9daf3a01",
             "metadata": {},
             "outputs": [],
             "source": [
-                "from IPython.lib.pretty import pprint\n",
-                "from src.function.seoul_open_api import create_api_url, get_result_json\n",
-                "\n",
                 "\n",
                 "import os\n",
                 "import dotenv\n",
@@ -127,7 +199,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from src.function.seoul_open_api import get_all_data_list\n",
                 "import os\n",
                 "import dotenv\n",
                 "\n",
@@ -181,21 +252,6 @@
                 "df = df.rename(columns=column_mapping)\n",
                 "df = df.sort_values(by=\"기준_년분기_코드\")\n",
                 "df.to_csv(output_path, index=False)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "b198e649",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import pandas as pd\n",
-                "\n",
-                "file_path = \"../output/서울시_상권분석서비스_길단위인구_행정동_2019_2025.csv\"\n",
-                "\n",
-                "df = pd.read_csv(file_path)\n",
-                "print(df.head())\n"
             ]
         },
         {
@@ -342,7 +398,6 @@
             "source": [
                 "import os\n",
                 "import dotenv\n",
-                "from src.function.seoul_open_api import get_list_total_count, get_data_list_by_year\n",
                 "import pandas as pd\n",
                 "\n",
                 "\n",
