--- a/notebooks/행정동_단위_서울_생활인구.ipynb
+++ b/notebooks/행정동_단위_서울_생활인구.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.lib.pretty import pprint\n",
+    "from pprint import pprint\n",
     "from src.function.seoul_open_api import create_api_url, get_result_json\n",
     "\n",
     "\n",
