--- a/notebooks/혼잡도_종합_연관성_분석.ipynb
+++ b/notebooks/혼잡도_종합_연관성_분석.ipynb
@@ -32,6 +32,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\USERS\\ADMINISTRATOR\\DOCUMENTS\\SUBWAY-CONGESTION-ANALYSIS\\.VENV\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -40,6 +48,7 @@
     }
    ],
    "source": [
+    "from huggingface_hub import hf_hub_download\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,7 +64,20 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "repo_id = \"alrq/subway\"       # 데이터셋 리포지토리 ID\n",
+    "filename = \"db/subway.db\"     # 리포지토리 내 파일 경로\n",
+    "local_dir = \".\"               # 다운로드 받을 로컬 기본 경로 (이 경우 ./db/subway.db 로 저장됨)\n",
+    "# 파일 다운로드\n",
+    "# local_dir을 지정하면 리포지토리의 폴더 구조를 유지하며 파일을 저장합니다.\n",
+    "DB_PATH = hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    repo_type=\"dataset\",\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "\n",
     "DB_PATH = \"../db/subway.db\"\n",
+    "\n",
     "TARGET_LINES = ['2호선', '4호선', '5호선']\n",
     "\n",
     "def get_connection():\n",
